# Server

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20240811025319_init.down.sql  20240811025319_init.up.sql
src/: config.rs  errors.rs  filters.rs  handlers.rs  jwt_auth.rs  main.rs  model.rs  response.rs  route.rs  schema.rs  session_auth.rs
test/: user1.json
